@@ -26,7 +26,7 @@ sub _keywords {
 
                  get_current_branch
 
-                 error get_errors nocarp
+                 error get_errors
 
                  match_user im_admin grok_groups_spec grok_groups im_memberof
 
@@ -576,6 +576,7 @@ sub error {
     my ($git, $prefix, $message, $details) = @_;
     $message =~ s/\n*$//s;    # strip trailing newlines
     my $fmtmsg = "\n[$prefix] $message";
+    my $nocarp = $git->get_config(githooks => 'nocarp');
     if ($details) {
         # The details may have been generated by Carp::croak, in which case
         # it will contain a suffix telling where the error
@@ -583,16 +584,14 @@ sub error {
         # user is going to receive the error message produced by a server
         # hook he/she won't be able to use that information. So, we may have
         # to strip the context from the details.
-        $details =~ s/ at .*? line \d+(?: thread \d+)?\.?$//s
-            if $git->{_plugin_githooks}{nocarp};
-
+        $details =~ s/ at .*? line \d+(?: thread \d+)?\.?$//s if $nocarp;
         $details =~ s/\n*$//s; # strip trailing newlines
         $details =~ s/^/  /gm; # prefix each line with two spaces
         $fmtmsg .= ":\n\n$details\n";
     }
     $fmtmsg .= "\n";            # end in a newline
     push @{$git->{_plugin_githooks}{errors}}, $fmtmsg;
-    if ($git->{_plugin_githooks}{nocarp}) {
+    if ($nocarp) {
         warn $fmtmsg;           ## no critic (RequireCarping)
     } else {
         carp $fmtmsg;
@@ -604,12 +603,6 @@ sub get_errors {
     my ($git) = @_;
 
     return exists $git->{_plugin_githooks}{errors} ? @{$git->{_plugin_githooks}{errors}} : ();
-}
-
-sub nocarp {
-    my ($git) = @_;
-    $git->{_plugin_githooks}{nocarp} = 1;
-    return;
 }
 
 ##############
@@ -1357,17 +1350,6 @@ doesn't die.
 
 This method returns a list of all error messages recorded with the
 C<error> method.
-
-=head2 nocarp
-
-By default all errors produced by Git::Hooks use L<Carp::croak>, so that
-they contain a suffix telling where the error occurred. Sometimes you may
-not want this. For instance, if the user is going to receive the error
-message produced by a server hook he/she won't be able to use that
-information.
-
-This method makes B<error> strip any such suffixes from its DETAILS argument
-and to produce its own message with B<warn> instead of B<carp>.
 
 =head1 SEE ALSO
 
